[fix] Improve link color contrast to WCAG AAA (7.31:1)

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,7 @@ body {
   opacity: 0;
 }
 .bubble a {
-  color: #0A84FF;
+  color: #A8D4FF;
 }
 .bubble .loading {
   position: absolute;
